# kickstarter

./: .gitignore  LICENSE  README.md
backend/: README.md  main.py  pyproject.toml  pyrightconfig.json
backend/documentation/: main.md
backend/src/: main.py
backend/src/api/: __init__.py  simulation.py
backend/src/core/: settings.py
backend/src/models/: __init__.py  enums.py  orders.py  responses.py
frontend/: package-lock.json  package.json
frontend/src/app/: app.component.html
frontend/src/app/api/: api.module.ts  models.ts  services.ts
frontend/src/app/api/models/: error-response.ts  timeframe.ts
