[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "pydantic>=2.11.5",
]

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]
[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["__pycache__", ".venv", "migrations"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["api", "core", "models", "services"]
